<!-- Copyright 2019 LinkedIn Corporation -->
<!-- All Rights Reserved. -->
<!-- -->
<!-- Licensed under the BSD 2-Clause License (the "License").  See License in the project root -->
<!-- for license information. -->
<resources>
    <string name="app_name">LiTr</string>

    <string name="demo_case_transcode_video_gl">Transcode Video/Audio (GL Renderer)</string>
    <string name="demo_case_free_transform_video_gl">Free Transform Video (GL Renderer)</string>
    <string name="demo_case_square_center_crop">Square Center Crop</string>
    <string name="demo_case_video_watermark">Video Watermark</string>
    <string name="demo_case_empty_video">Empty Video</string>
    <string name="demo_case_mux_video_audio">Mux Video And Audio Tracks</string>
    <string name="demo_case_video_filters">Video Filters</string>
    <string name="demo_case_video_filters_preview">Video Filters Preview</string>
    <string name="demo_case_mock_transcode_video">Mock Transcode Video</string>
    <string name="demo_case_transcode_audio">Transcode Audio</string>
    <string name="demo_case_extract_frames">Extract Video Frames</string>
    <string name="demo_case_transcode_to_vp9">Transcode To VP9</string>
    <string name="demo_case_audio_record">Record Audio</string>
    <string name="demo_case_camera_record">Record Camera (via Camera2)</string>
    <string name="demo_case_native_muxer_transcode">Native Muxer (Transcode)</string>
    <string name="demo_case_native_muxer_camera">Native Muxer (Camera)</string>

    <string name="error_vp9_not_supported">VP8/VP9 is not supported</string>
    <string name="error_marshmallow_or_newer_required">Android Marshmallow or newer required</string>
    <string name="ok">OK</string>

    <string name="include">Include</string>
    <string name="overlay">Overlay</string>
    <string name="apply_overlay">Apply Overlay</string>
    <string name="transcode_video">Transcode Video</string>
    <string name="transcode_audio">Transcode Audio</string>
    <string name="trim">Trim</string>
    <string name="audio_volume">Volume</string>
    <string name="write_to_wav">Write to WAV file</string>

    <string name="pick_video">Pick Video</string>
    <string name="pick_audio">Pick Audio</string>
    <string name="pick_video_overlay">Pick Video Overlay</string>
    <string name="pick_audio_overlay">Pick Audio Overlay</string>
    <string name="source_path" formatted="true">Uri: %s</string>
    <string name="size" formatted="true">Size: %.2f MB</string>

    <string name="track_info" formatted="true">Track %1$d: %2$s</string>

    <string name="default_video_mime_type">video/avc</string>

    <string name="target_video">Target Video</string>
    <string name="aspect_ratio">Aspect Ratio</string>

    <string name="pick_background">Pick Background</string>
    <string name="transcode">Transcode</string>
    <string name="cancel">Cancel</string>

    <string name="record">Record</string>
    <string name="stop">Stop</string>

    <string name="target_path" formatted="true">Target: %s</string>
    <string name="play">Play</string>

    <string name="select_track">Select Track</string>
    <string name="video_track">Video Track</string>
    <string name="audio_track">Audio Track</string>
    <string name="extract">Extract</string>

    <string name="pick_media">Pick Media</string>
    <string name="cancelled">Transcoding cancelled</string>
    <string name="transcoding_error">Transcoding Error: %s</string>
    <string name="unknown_error">Unknown</string>

    <string name="menu_device_info">Device Info</string>
    <string name="menu_capture_formats">Capture Formats</string>
    <string name="menu_codecs">Codec List</string>
    <string name="menu_avc_encoders">AVC Encoders</string>
    <string name="menu_avc_decoders">AVC Decoders</string>
    <string name="title_activity_device_info">Device Info</string>

    <string name="brand" formatted="true">Brand: %s\n</string>
    <string name="manufacturer" formatted="true">Manufacturer: %s\n</string>
    <string name="make">Make: %s\n</string>
    <string name="board">Board: %s\n</string>
    <string name="product">Product: %s\n</string>
    <string name="api_level">API Level: %d\n</string>

    <string name="supported_mime_type" formatted="true">Supported MIME type: %s\n</string>
    <string name="color_formats">Color formats:\n</string>
    <string name="encoder_complexity_range">Encoder complexity range: %s\n</string>
    <string name="bitrate_range">Bitrate range: %s\n</string>
    <string name="supported_heights">Supported heights: %s\n</string>
    <string name="supported_widths">Supported widths: %s\n</string>
    <string name="supported_frame_rates">Supported frame rates: %s\n</string>
    <string name="supported_profiles">Supported profiles:\n</string>

    <string name="camcorder_profile_not_supported" formatted="true">Camcorder profile %d is not supported</string>
    <string name="video_frame_width">Video frame width: %d\n</string>
    <string name="video_frame_height">Video frame height: %d\n</string>
    <string name="file_output_format">File output format: %s\n</string>
    <string name="video_codec">Video codec: %s\n</string>
    <string name="video_bitrate">Video bitrate: %d Mbps\n</string>
    <string name="video_frame_rate">Video frame rate: %d fps\n</string>
    <string name="audio_codec">Audio codec: %s\n</string>
    <string name="audio_bitrate">Audio bitrate: %d Kbps\n</string>
    <string name="audio_sample_rate">Audio sample rate: %d KHz\n</string>
    <string name="audio_channels">Audio channels: %d\n</string>
    <string name="bitrate">Bitrate: %d (Mbps)\n</string>

    <string name="track" >Track</string>
    <string name="mime_type">MIME type</string>
    <string name="width">Width (pixels)</string>
    <string name="height">Height (pixels)</string>
    <string name="rotation">Rotation (degrees)</string>
    <string name="duration">Duration (\u03bcs)</string>
    <string name="bitrate_mbps">Bitrate (Mbps)</string>
    <string name="bitrate_kbps">Bitrate (Kbps)</string>
    <string name="frame_rate">Frame Rate (fps)</string>
    <string name="key_frame_interval">Key Frame Interval (s)</string>
    <string name="channel_count">Channels</string>
    <string name="sample_rate">Sample Rate</string>

    <string name="no_transformation_stats">No transformation stats available</string>

    <string name="stats_track" formatted="true">Track: %d\n</string>
    <string name="stats_mime_type" formatted="true">MIME type: %s\n</string>
    <string name="stats_width" formatted="true">Width: %d\n</string>
    <string name="stats_height" formatted="true">Height: %d\n</string>
    <string name="stats_bitrate" formatted="true">Bitrate: %d\n</string>
    <string name="stats_duration" formatted="true">Duration: %d\n</string>
    <string name="stats_frame_rate" formatted="true">Frame Rate: %d\n</string>
    <string name="stats_key_frame_interval" formatted="true">Key Frame Interval: %d\n</string>
    <string name="stats_rotation" formatted="true">Rotation: %d\n</string>
    <string name="stats_channel_count" formatted="true">Channel Count: %d\n</string>
    <string name="stats_sampling_rate" formatted="true">Sampling Rate: %d\n</string>

    <string name="stats_source_format">Source Format\n</string>
    <string name="stats_target_format">Target Format\n</string>

    <string name="stats_decoder" formatted="true">Decoder: %s\n</string>
    <string name="stats_encoder" formatted="true">Encoder: %s\n</string>
    <string name="stats_transformation_duration" formatted="true">Transformation duration: %d ms\n</string>

    <string-array name="rotation_array">
        <item>0</item>
        <item>90</item>
        <item>180</item>
        <item>270</item>
    </string-array>

    <string-array name="video_mime_type_array">
        <item>video/avc</item>
        <item>video/hevc</item>
        <item>video/x-vnd.on2.vp8</item>
        <item>video/x-vnd.on2.vp9</item>
    </string-array>

</resources>
