<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2019 LinkedIn Corporation -->
<!-- All Rights Reserved. -->
<!-- -->
<!-- Licensed under the BSD 2-Clause License (the "License").  See License in the project root -->
<!-- for license information. -->
<layout>
    <data>
        <import type="android.view.View"/>

        <variable
            name="sourceMedia"
            type="com.linkedin.android.litr.demo.data.SourceMedia" />

        <variable
            name="videoTarget"
            type="com.linkedin.android.litr.demo.data.VideoTarget" />

        <variable
            name="audioTarget"
            type="com.linkedin.android.litr.demo.data.AudioTarget" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{sourceMedia == null ? View.GONE : View.VISIBLE}"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_track"
            android:textStyle="bold"
            android:padding="@dimen/cell_padding"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_keep_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_track"
                android:padding="@dimen/cell_padding"
                android:checked="@{videoTarget.shouldKeepTrack}"
                android:onCheckedChanged="@{(switch, checked) -> videoTarget.onCheckedChanged(switch, checked)}"
                android:visibility="@{(sourceMedia != null &amp;&amp; sourceMedia.videoMimeType != null) ? View.VISIBLE : View.GONE}"/>

            <RadioButton
                android:id="@+id/radio_button_keep_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio_track"
                android:padding="@dimen/cell_padding"
                android:checked="@{audioTarget.shouldKeepTrack}"
                android:onCheckedChanged="@{(switch, checked) -> audioTarget.onCheckedChanged(switch, checked)}"
                android:visibility="@{(sourceMedia != null &amp;&amp; sourceMedia.audioMimeType != null) ? View.VISIBLE : View.GONE}"/>

        </RadioGroup>

    </LinearLayout>

</layout>