<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2022 LinkedIn Corporation -->
<!-- All Rights Reserved. -->
<!-- -->
<!-- Licensed under the BSD 2-Clause License (the "License").  See License in the project root -->
<!-- for license information. -->
<!-- -->
<!-- Author: Ian Bird -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="mediaSource"
            type="com.linkedin.android.litr.io.AudioRecordMediaSource"
            tools:targetApi = "23"/>

        <variable
            name="targetMedia"
            type="com.linkedin.android.litr.demo.data.TargetMedia" />

        <variable
            name="transformationState"
            type="com.linkedin.android.litr.demo.data.TransformationState" />

        <variable
            name="transformationPresenter"
            type="com.linkedin.android.litr.demo.data.RecordAudioPresenter" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/record"
                android:enabled="@{(transformationState.state != transformationState.STATE_RUNNING)}"
                android:padding="@dimen/cell_padding"
                android:onClick="@{() -> transformationPresenter.recordAudio(mediaSource, targetMedia, transformationState)}"/>

            <Button
                android:id="@+id/button_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:enabled="@{transformationState.state == transformationState.STATE_RUNNING}"
                android:padding="@dimen/cell_padding"
                android:onClick="@{() -> transformationPresenter.stopRecording(mediaSource)}"/>

            <Button
                android:id="@+id/button_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:enabled="@{transformationState.state == transformationState.STATE_COMPLETED}"
                android:padding="@dimen/cell_padding"
                android:onClick="@{() -> transformationPresenter.play(targetMedia.contentUri)}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/cell_padding"
                android:text="@{transformationState.stats}"
                android:visibility="@{transformationState.state == transformationState.STATE_RUNNING || transformationState.stats == null ? View.GONE : View.VISIBLE}"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>